--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: Dark Poole
-url: https://getpoole.com
+title: Development Study Blog
+url: https://github.com/libertyfromthinking/greycells.github.io
 paginate: 1
 baseurl: ""
 permalink: pretty
@@ -32,9 +32,9 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Mark Otto
-  url: https://twitter.com/mdo
-  email: markdotto@gmail.com
+  name: grey cells
+  url: https://github.com/libertyfromthinking/greycells.github.io
+  email: libertyfromthinking@gmail.com
 
 # Custom vars
 version: 3.0.0
